Refactoring
- Reduced duplicities in poms
- Introduced central-publishing-maven-plugin
- Updated dependencies
- Upgrade from JUnit4 to JUnit5
- Removed environment-setup module

Signed-off-by: David Matějček <david.matejcek@omnifish.ee>